--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div id="chat-box"></div>
         <textarea id="input-box" placeholder="Type your message..."></textarea>
         <button id="send-btn">Send</button>
+        <div id="spinner" style="display:none;">Loading...</div> <!-- Spinner added here -->
     </div>
     <script src="script.js"></script>
 </body>
